{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 195,
  "lineage": "d47e3e58-a2ea-e267-c555-e80f41ac3bb3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http-1",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01c2a1611b4c55bfc",
            "domain": "vpc",
            "id": "eipalloc-02f557452c35b2f6c",
            "instance": "i-01c8bd9d6133b3fa7",
            "network_border_group": "us-west-2",
            "network_interface": "eni-09e25b15f46b62892",
            "private_dns": "ip-10-10-1-113.us-west-2.compute.internal",
            "private_ip": "10.10.1.113",
            "public_dns": "ec2-44-241-142-116.us-west-2.compute.amazonaws.com",
            "public_ip": "44.241.142.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http-instance-http-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.http",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance-http-2",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0237277cb8489896e",
            "domain": "vpc",
            "id": "eipalloc-046171141f9e6ee16",
            "instance": "i-0a4b1c0bab2ffe9c5",
            "network_border_group": "us-west-2",
            "network_interface": "eni-08d298b795ee5f49d",
            "private_dns": "ip-10-10-1-85.us-west-2.compute.internal",
            "private_ip": "10.10.1.85",
            "public_dns": "ec2-44-233-170-133.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.170.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http-instance-http-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.http",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance-http-3",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cdd6c8ba95e747ea",
            "domain": "vpc",
            "id": "eipalloc-0848d502e9c025c82",
            "instance": "i-050289621f592337b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0a59172dbbd85fedd",
            "private_dns": "ip-10-10-1-184.us-west-2.compute.internal",
            "private_ip": "10.10.1.184",
            "public_dns": "ec2-54-189-132-64.us-west-2.compute.amazonaws.com",
            "public_ip": "54.189.132.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http-instance-http-3"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.http",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-db-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0928f4202481dfdf6",
            "arn": "arn:aws:ec2:us-west-2:271868875615:instance/i-034526f17d4f4f948",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034526f17d4f4f948",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "charles",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0333d3ce5a8f582a1",
            "private_dns": "ip-10-10-2-85.us-west-2.compute.internal",
            "private_ip": "10.10.2.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-028f874052b0fb136",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053a9bb19fdc39f15",
            "tags": {
              "Name": "instance-db-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013dcea7bff717d93",
              "sg-0bd4ba4bca3516e24"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.db",
            "aws_subnet.db",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance-db-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0928f4202481dfdf6",
            "arn": "arn:aws:ec2:us-west-2:271868875615:instance/i-06d6f9f9ffb60b2af",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d6f9f9ffb60b2af",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "charles",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0287ba9d4cb5c1ead",
            "private_dns": "ip-10-10-2-249.us-west-2.compute.internal",
            "private_ip": "10.10.2.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d196716cf29f0e71",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053a9bb19fdc39f15",
            "tags": {
              "Name": "instance-db-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013dcea7bff717d93",
              "sg-0bd4ba4bca3516e24"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.db",
            "aws_subnet.db",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0928f4202481dfdf6",
            "arn": "arn:aws:ec2:us-west-2:271868875615:instance/i-01c8bd9d6133b3fa7",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c8bd9d6133b3fa7",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "charles",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e25b15f46b62892",
            "private_dns": "ip-10-10-1-113.us-west-2.compute.internal",
            "private_ip": "10.10.1.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c585376b8b2063a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac4bb7129723c610",
            "tags": {
              "Name": "instance-http-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013dcea7bff717d93",
              "sg-0917b47ac24bdcdca"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance-http-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0928f4202481dfdf6",
            "arn": "arn:aws:ec2:us-west-2:271868875615:instance/i-0a4b1c0bab2ffe9c5",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4b1c0bab2ffe9c5",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "charles",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d298b795ee5f49d",
            "private_dns": "ip-10-10-1-85.us-west-2.compute.internal",
            "private_ip": "10.10.1.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-095d0da40f6f9b4d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac4bb7129723c610",
            "tags": {
              "Name": "instance-http-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013dcea7bff717d93",
              "sg-0917b47ac24bdcdca"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance-http-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0928f4202481dfdf6",
            "arn": "arn:aws:ec2:us-west-2:271868875615:instance/i-050289621f592337b",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050289621f592337b",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "charles",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a59172dbbd85fedd",
            "private_dns": "ip-10-10-1-184.us-west-2.compute.internal",
            "private_ip": "10.10.1.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040ad56d5292ec733",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac4bb7129723c610",
            "tags": {
              "Name": "instance-http-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013dcea7bff717d93",
              "sg-0917b47ac24bdcdca"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:internet-gateway/igw-0e9a12ec73ccb3ab9",
            "id": "igw-0e9a12ec73ccb3ab9",
            "owner_id": "271868875615",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-02042cf4df77f085f"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:loadbalancer/net/db-lb/da625a462ecdc4ca",
            "arn_suffix": "net/db-lb/da625a462ecdc4ca",
            "dns_name": "db-lb-da625a462ecdc4ca.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:loadbalancer/net/db-lb/da625a462ecdc4ca",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "db-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-053a9bb19fdc39f15"
              }
            ],
            "subnets": [
              "subnet-053a9bb19fdc39f15"
            ],
            "tags": {
              "Name": "db-lb"
            },
            "vpc_id": "vpc-02042cf4df77f085f",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.db",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:loadbalancer/net/http-lb/d6c845b502f72fef",
            "arn_suffix": "net/http-lb/d6c845b502f72fef",
            "dns_name": "http-lb-d6c845b502f72fef.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:loadbalancer/net/http-lb/d6c845b502f72fef",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "http-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ac4bb7129723c610"
              }
            ],
            "subnets": [
              "subnet-0ac4bb7129723c610"
            ],
            "tags": {
              "Name": "http-lb"
            },
            "vpc_id": "vpc-02042cf4df77f085f",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:listener/net/db-lb/da625a462ecdc4ca/757c33528c68b7d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/db-lb-target-group/94405f76bc2a9049",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:listener/net/db-lb/da625a462ecdc4ca/757c33528c68b7d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:loadbalancer/net/db-lb/da625a462ecdc4ca",
            "port": 3306,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_lb.db",
            "aws_lb_target_group.db",
            "aws_subnet.db",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:listener/net/http-lb/d6c845b502f72fef/a475e5896f8a1e83",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/6470f966d174a8ca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:listener/net/http-lb/d6c845b502f72fef/a475e5896f8a1e83",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:loadbalancer/net/http-lb/d6c845b502f72fef",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_lb.http",
            "aws_lb_target_group.http",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/db-lb-target-group/94405f76bc2a9049",
            "arn_suffix": "targetgroup/db-lb-target-group/94405f76bc2a9049",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/db-lb-target-group/94405f76bc2a9049",
            "lambda_multi_value_headers_enabled": false,
            "name": "db-lb-target-group",
            "port": 3306,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "db-lb-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-02042cf4df77f085f"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/6470f966d174a8ca",
            "arn_suffix": "targetgroup/http-lb-target-group/6470f966d174a8ca",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/6470f966d174a8ca",
            "lambda_multi_value_headers_enabled": false,
            "name": "http-lb-target-group",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "http-lb-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-02042cf4df77f085f"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-db-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/db-lb-target-group/94405f76bc2a9049-20210215021734811400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/db-lb-target-group/94405f76bc2a9049",
            "target_id": "i-034526f17d4f4f948"
          },
          "dependencies": [
            "aws_instance.db",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_lb_target_group.db",
            "aws_security_group.administration",
            "aws_security_group.db",
            "aws_subnet.db",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance-db-2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/db-lb-target-group/94405f76bc2a9049-20210215021734760900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/db-lb-target-group/94405f76bc2a9049",
            "target_id": "i-06d6f9f9ffb60b2af"
          },
          "dependencies": [
            "aws_instance.db",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_lb_target_group.db",
            "aws_security_group.administration",
            "aws_security_group.db",
            "aws_subnet.db",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/6470f966d174a8ca-20210215021735168900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/6470f966d174a8ca",
            "target_id": "i-01c8bd9d6133b3fa7"
          },
          "dependencies": [
            "aws_instance.http",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_lb_target_group.http",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance-http-2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/6470f966d174a8ca-20210215021735469700000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/6470f966d174a8ca",
            "target_id": "i-0a4b1c0bab2ffe9c5"
          },
          "dependencies": [
            "aws_instance.http",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_lb_target_group.http",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance-http-3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/6470f966d174a8ca-20210215021735192000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/6470f966d174a8ca",
            "target_id": "i-050289621f592337b"
          },
          "dependencies": [
            "aws_instance.http",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_lb_target_group.http",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03530272156a60794",
            "owner_id": "271868875615",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9a12ec73ccb3ab9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-02042cf4df77f085f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0620a059bc0827f69",
            "route_table_id": "rtb-03530272156a60794",
            "subnet_id": "subnet-053a9bb19fdc39f15"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.db",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6bf311b35f1dfe0",
            "route_table_id": "rtb-03530272156a60794",
            "subnet_id": "subnet-0ac4bb7129723c610"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:security-group/sg-013dcea7bff717d93",
            "description": "Allow default administration service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013dcea7bff717d93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "administration",
            "name_prefix": "",
            "owner_id": "271868875615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-02042cf4df77f085f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:security-group/sg-0bd4ba4bca3516e24",
            "description": "Allow db incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd4ba4bca3516e24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db",
            "name_prefix": "",
            "owner_id": "271868875615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-02042cf4df77f085f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:security-group/sg-0917b47ac24bdcdca",
            "description": "Allow web incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0917b47ac24bdcdca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "271868875615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-02042cf4df77f085f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:subnet/subnet-053a9bb19fdc39f15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-053a9bb19fdc39f15",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271868875615",
            "tags": {
              "Name": "subnet-db"
            },
            "vpc_id": "vpc-02042cf4df77f085f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:subnet/subnet-0ac4bb7129723c610",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0ac4bb7129723c610",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271868875615",
            "tags": {
              "Name": "subnet-http"
            },
            "vpc_id": "vpc-02042cf4df77f085f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:vpc/vpc-02042cf4df77f085f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0450488947bb4bc5c",
            "default_route_table_id": "rtb-0217d22be3460846e",
            "default_security_group_id": "sg-058fec9db7bdf18ed",
            "dhcp_options_id": "dopt-43ccc621",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02042cf4df77f085f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0217d22be3460846e",
            "owner_id": "271868875615",
            "tags": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}